@@ -233,6 +233,22 @@ public class MimeTypesReaderTest {
        }
     }
     
+    private class CustomClassLoader extends ClassLoader{
+    }
+    
+    /**
+     * TIKA-2460 Test loading of custom-mimetypes.xml from sys prop.
+     */
+    @Test
+    public void testExternalMimeTypes() throws Exception {
+        System.setProperty(MimeTypesFactory.CUSTOM_MIMES_SYS_PROP, 
+                "src/test/resources/org/apache/tika/mime/external-mimetypes.xml");
+        MimeTypes mimeTypes = MimeTypes.getDefaultMimeTypes(new CustomClassLoader());
+        Metadata m = new Metadata();
+        m.add(Metadata.RESOURCE_NAME_KEY, "test.external.mime.type");
+        assertEquals("external/mime-type", mimeTypes.detect(null, m).toString());
+    }
+    
     @Test
     public void testGetExtensionForPowerPoint() throws Exception {
         MimeType mt = this.mimeTypes.forName("application/vnd.ms-powerpoint");
